# latex-compilation-server

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  latex.md  main.py  main.tex  pyproject.toml  requirements.in
.agent/workflows/: deploy.md
frontend/: .dockerignore  Dockerfile  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
frontend/src/components/: App.tsx  Editor.tsx  ImageLibrary.tsx  Navbar.tsx  Preview.tsx
frontend/src/lib/: api.ts  latex.ts
frontend/src/pages/: index.astro
frontend/src/pages/api/: cleanup.ts  compile-batch.ts  compile-status.ts  compile-zip.ts  compile.ts  health.ts
frontend/src/pages/api/images/: [docId].ts
frontend/src/pages/api/images/[docId]/: [filename].ts
frontend/src/styles/: global.css
prompts/: latex_prompt.txt  latex_prompt_master.md
tests/: main.tex  test_zip_integration.py
