[project]
name = "latex-compilation-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "uvicorn[standard]>=0.34.2",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "httpx>=0.28.1",
    "pytest-cov>=6.1.1",
]
